--- a/Introduction to Data Science/assignments/Assignment+4.ipynb
+++ b/Introduction to Data Science/assignments/Assignment+4.ipynb
@@ -213,8 +213,7 @@
     "    quarters = [str(y) + \"q\" + str(q) for y in range(2000, 2017) for q in range(1, 5)]\n",
     "    # Rename the columns\n",
     "    df.columns = quarters[:-1]\n",
-    "    # What the actual fuck. For some reason the values were too far to the right. I'm guessing\n",
-    "    # this is to do with having to drop 2016q4 but I cba to figure this out\n",
+    "    # Shift the values 1 to the left to compensate for taking away 2016q4\n",
     "    df = df.shift(-1, axis=1)\n",
     "\n",
     "    return df"
